<resources>
    <string name="app_name">信息发布</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_template">TemplateActivity</string>
    <string name="title_activity_dms">Dms</string>
    <string name="title_activity_download_resource">DownloadResource</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_server_ip">ServerIPActivity</string>
    <string name="title_activity_sub">SubActivity</string>
    <string name="title_activity_install_apk">InstallAPKActivity</string>
    <string name="title_activity_publish_apk">PublishAPKActivity</string>
    <string name="title_activity_start_up">StartUpActivity</string>
    <string name="spinner_no_select">未选择</string>
    <string name="download_errorinfo">下载失败</string>
    <string name="download_successinfo">下载完成</string>
    <string name="download_start">下载中</string>
    <string name="file_error">文件错误,请联系管理员</string>
    <string name="tip_cancleregister">您已取消注册，再次注册请扫码</string>
    <string name="tip_rename">设备名已改为：</string>
    <string name="tip_renamefail">设备名修改失败</string>
    <string name="msg_memorytip">可用存储空间不足，下载失败：</string>
    <string name="msg_issuredeleteall">确认清空全部节目？</string>
    <string name="mqtt_disconnected">已断开</string>
    <string name="mqtt_connected">已连接</string>
    <string name="internet_disconnected">网络未连接</string>
    <string name="tip_illegal_devicename">该设备名不合法</string>
    <string name="tip_illegal_serveraddress">服务器地址不合法</string>
    <string name="tip_reserveraddress">服务器已改为：</string>
    <string name="tip_reserveraddressfail">保存失败</string>
    <string name="tip_powercommandreceive">定时开关机指令已收到</string>
    <string name="nextprogram"> 即将播放节目：</string>
    <string name="msg_issureexit">确认退出吗？</string>
    <string name="btn_ok">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_played">播放中</string>
    <string name="btn_play">播放</string>
    <string name="btn_used">应用中</string>
    <string name="btn_use">应用</string>
    <string name="tv_noschedule">(无时段)</string>
    <string name="msg_iscancleregister">确认取消注册？</string>
    <string name="tip_cancelregisterfail">取消注册失败，请检查网络</string>
    <string name="tip_illegal_powerontime">开机时间格式不合法，保存失败，请重新选择</string>
    <string name="tip_illegal_powerofftime">关机时间格式不合法，保存失败，请重新选择</string>
    <string name="tip_savesuccess">设置已保存</string>
    <string name="tip_imgloadfail">图片加载失败</string>
    <string name="tv_downloaded">资源更新正在下载,Loading...</string>
    <string name="tv_downloadedprogress">当前下载进度：</string>
    <string name="tv_startinstall">下载完毕，正在安装……</string>
    <string name="tv_reboot">安装完毕，请重启……</string>
    <string name="tip_apknotexist">apk 不存在！</string>
    <string name="tv_startdelete">正在清除……</string>
    <string name="msg_scan">请扫面二维码注册</string>
    <string name="tip_registerfailbyinternet">注册失败，请连接网络</string>
    <string name="tip_notcorrectcode">验证码不正确，请重新输入</string>
    <string name="tip_registerfailbynotscan">注册失败，请扫码输入验证码注册</string>
    <string name="tip_registersuccess">设备注册成功</string>
    <string name="tv_startload">正在加载,请稍候....</string>
    <string name="tv_hasnotlocalresource">本地无资源</string>
    <string name="tip_doubleclickexit">再按一次退出</string>
    <string name="tip_tip">提示</string>
    <string name="tip_cannotlogin">该设备无法登陆系统，请联系客服！</string>
    <string name="tip_modifysuccess">修改成功</string>
    <string name="tv_unregistertip">您还未注册设备，请按OK键打开二维码扫描注册</string>
    <string name="tv_inputipaddresstip">请输入IP地址</string>
    <string name="btn_sure">确认</string>
    <string name="btn_back">返回</string>
    <string name="setting">设置</string>
    <string name="systemsetting">系统设置</string>
    <string name="btn_appinstall">应用安装</string>
    <string name="deviceinfo">设备信息</string>
    <string name="reserveraddress">修改服务器地址</string>
    <string name="systemtip">系统提示</string>
    <string name="isbootdms">是否启动信息发布系统 ?</string>
    <string name="username">用户名：</string>
    <string name="deviceid">设备号 ：</string>
    <string name="devicename">设备名：</string>
    <string name="serveraddress">服务器地址：</string>
    <string name="ipaddress">IP地址：</string>
    <string name="mqttaddress">通讯服务器：</string>
    <string name="resourcepath">资源路径：</string>
    <string name="versioncode">版本号：</string>
    <string name="save">保存</string>
    <string name="time"> 00 时 00 分 </string>
    <string name="cb_deviceinfo">设\n备\n信\n息</string>
    <string name="cb_programlist">节\n目\n列\n表</string>
    <string name="cb_systemsetting">系\n统\n设\n置</string>
    <string name="exit">退出</string>
    <string name="tip_hasresidualfile">发现目标路径存有残留文件，是否清除</string>
    <string name="immediatelyplay">直接播放</string>
    <string name="scheduleplay">定时播放</string>
    <string name="deleteall">清空全部</string>
    <string name="deletecache">清理缓存</string>
    <string name="publishlist">排程列表</string>
    <string name="schedulelist">时段列表</string>
    <string name="programlist">节目列表</string>
    <string name="delete">删除</string>
    <string name="detail">详情</string>
    <string name="inputcode">请输入验证码</string>
    <string name="commit">提交</string>
    <string name="ispoweronboot">1.是否开机自启：</string>
    <string name="is">是</string>
    <string name="volume">2.音量：</string>
    <string name="schedulepower">3.定时开关机</string>
    <string name="powerdate">开机日</string>
    <string name="everyday">每天</string>
    <string name="sunday">周天</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="powerontime">开机时间</string>
    <string name="powerofftime">关机时间</string>
    <string name="isremotewake">4.是否远程唤醒：</string>
    <string name="savesetting">保存设置</string>
    <string name="cancelregister">取消注册</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
</resources>
