<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:alpha="0.9"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tv_isAutoStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ispoweronboot"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/cb_isBootAutoStart"
            style="@style/CheckboxStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/is" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/volume"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-" />

        <EditText
            android:id="@+id/et_defaultVolume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="3" >
        </EditText>

        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_timeSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/schedulepower"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tv_openDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/powerdate" />

        <CheckBox
            android:id="@+id/cb_isAllDate"
            style="@style/CheckboxStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/everyday" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <CheckBox
            android:id="@+id/cb_sunday"
            style="@style/CheckboxStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sunday" />

        <CheckBox
            android:id="@+id/cb_monday"
            style="@style/CheckboxStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monday" />

        <CheckBox
            android:id="@+id/cb_tuesday"
            style="@style/CheckboxStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tuesday" />

        <CheckBox
            android:id="@+id/cb_wednesday"
            style="@style/CheckboxStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wednesday" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <CheckBox
            android:id="@+id/cb_thurday"
            style="@style/CheckboxStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thursday" />

        <CheckBox
            android:id="@+id/cb_friday"
            style="@style/CheckboxStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friday" />

        <CheckBox
            android:id="@+id/cb_saturday"
            style="@style/CheckboxStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saturday" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tv_openTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/powerontime" />

        <Spinner
            android:id="@+id/sp_onHourTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:entries="@array/hour" />

        <TextView
            android:id="@+id/tv_onTimeSymbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text=":"
            android:textSize="25sp" />

        <Spinner
            android:id="@+id/sp_onMinuteTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/minute" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tv_stopTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/powerofftime" />

        <Spinner
            android:id="@+id/sp_offHourTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:entries="@array/hour" />

        <TextView
            android:id="@+id/tv_offTimeSymbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text=":"
            android:textSize="25sp" />

        <Spinner
            android:id="@+id/sp_offMinuteTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/minute" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/isremotewake"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/cb_isWakeUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/checkbox_selector"
            android:text="@string/is" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_isSaveSetting"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="100dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/btn_selector3"
        android:text="@string/savesetting" />

    <Button
        android:id="@+id/btn_isRegister"
        android:layout_width="wrap_content"
        android:layout_height="35sp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/btn_selector1"
        android:text="@string/cancelregister" />

</LinearLayout>