<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A5A1A2"
    android:orientation="vertical"
    >

  <TextView
      android:id="@+id/textView1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="28dp"
      />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center"
      android:orientation="vertical" >

      <Button
          android:id="@+id/btn_setting"
          android:layout_width="500dp"
          android:layout_height="70dp"
          android:layout_gravity="center"
          android:background="@drawable/btn_selector"
          android:focusable="true"
          android:focusableInTouchMode="true"
          android:text="@string/setting"
          android:textColor="#000000"
          android:textSize="35dp" />

      <Button
          android:id="@+id/btn_syssetting"
          android:layout_width="500dp"
          android:layout_height="70dp"
          android:layout_gravity="center"
          android:layout_marginTop="35dp"
          android:background="@drawable/btn_selector"
          android:text="@string/systemsetting"
          android:textColor="#000000"
          android:textSize="35dp" />

      <Button
          android:id="@+id/btn_apps"
          android:layout_width="500dp"
          android:layout_height="70dp"
          android:layout_gravity="center"
          android:layout_marginTop="35dp"
          android:background="@drawable/btn_selector"
          android:text="@string/btn_appinstall"
          android:textColor="#000000"
          android:textSize="35dp" />

      <Button
          android:id="@+id/btn_deviceinfo"
          android:layout_width="500dp"
          android:layout_height="70dp"
          android:layout_gravity="center"
          android:layout_marginTop="35dp"
          android:background="@drawable/btn_selector"
          android:text="@string/deviceinfo"
          android:textColor="#000000"
          android:textSize="35dp" />

      <Button
          android:id="@+id/btn_serverip"
          android:layout_width="500dp"
          android:layout_height="70dp"
          android:layout_gravity="center"
          android:layout_marginTop="35dp"
          android:background="@drawable/btn_selector"
          android:text="@string/reserveraddress"
          android:textColor="#000000"
          android:textSize="35dp" />
  </LinearLayout>

</LinearLayout>