<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:text="@string/tip_hasresidualfile" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center" >

        <Button
            android:id="@+id/btn_popup_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:layout_marginRight="20dp"
           
            android:text="@string/btn_ok" />

        <Button
            android:id="@+id/btn_popup_cancle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
              android:layout_marginLeft="20dp"
            android:text="@string/btn_cancel" />

    </LinearLayout>

</LinearLayout>
