<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#63B8FF"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:text="@string/systemtip"
            android:textColor="#ffffff"
            android:textSize="25dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="#ffffff"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/isbootdms"
                android:textColor="#000000"
                android:textSize="13sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btn_ok"
                    android:layout_width="100dp"
                    android:layout_height="35dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/btn_selector3"
                    android:text="@string/btn_ok" />

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="100dp"
                    android:layout_height="35dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/btn_selector3"
                    android:text="@string/btn_cancel" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>